# basic-financial-agent

./: .env.example  .gitignore  README.md  pyproject.toml
src/financial_agent/: crew.py  main.py
src/financial_agent/config/: agents.yaml  tasks.yaml
src/financial_agent/templates/: index.html  run_agent.html  set_env.html
